Bug 627032 - We should assert on allocations during shutdown (r=lhansen)